# homekit_bridge_manager

./: .gitignore  LICENSE  README.md  config.example.yaml  homekit_bridge_manager.py  pyproject.toml
