[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homekit-bridge-manager"
version = "1.0.0"
description = "Manage HomeKit bridges in Home Assistant with area-based entity organization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rocky Olsen"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/rockyolsen/homekit-bridge-manager"
Repository = "https://github.com/rockyolsen/homekit-bridge-manager"
Issues = "https://github.com/rockyolsen/homekit-bridge-manager/issues"

[project.scripts]
homekit-bridge-manager = "homekit_bridge_manager:main"

[tool.setuptools]
py-modules = ["homekit_bridge_manager"]
